--- a/nouns-wall/package.json
+++ b/nouns-wall/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "autoprefixer": "10.4.14",
     "next": "13.4.13",
+    "pino-pretty": "^10.2.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "viem": "^1.6.0",
+    "wagmi": "1.3.2"
   }
 }
