--- a/nouns-wall/package.json
+++ b/nouns-wall/package.json
@@ -19,6 +19,6 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "viem": "^1.6.0",
-    "wagmi": "1.3.2"
+    "wagmi": "^1.3.10"
   }
 }
